sidebar dan overlay

--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,9 @@ body{
 }
 
 @media (max-width: 991px){
-    .menu {
+    /* .menu {
         display: none;
-    }
+    } */
     .burger-icon {
         flex: 1;
         display: flex;
@@ -142,9 +142,88 @@ body{
     .hero-content p {
       max-width: 100%;
     }
-  }
-  @media (min-width: 1600px) { 
+}
+
+@media (min-width: 1600px) { 
     .hero-thumbnail {
       width: 40%;
     }
-  }
+}
+
+.sidebar{
+    flex: 1;
+}
+
+.top-sidebar {
+    display: none;
+}
+
+.overlay-bg{
+    display: none;
+}
+
+@media (max-width : 991px){
+    .sidebar{
+        position: absolute;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 4px rgba(0,0,0,0.15);
+        width: 180px;
+        top: 0;
+        right: -180px;
+        height: 100vh; /* vh :view height : full kebawah (sampai akhir konten) */
+        padding-top: 32px;
+        padding-right: 24px;
+        padding-left: 16px;
+        z-index: 1;
+    }
+
+    /* overlay background */
+    /* .sidebar::before{
+        content: '-';
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.6);
+        z-index: -1;
+    }
+
+    .logo{
+        z-index: -1;
+    } */
+    /* END overlay background */
+
+    .overlay-bg{
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.6);
+        display: none;
+    }
+
+    .top-sidebar{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .top-sidebar .h3{
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .menu a{
+        margin-left: 0;
+    }
+
+    
+}
